# pypackitup

./: .env.template  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  VERSION.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: python-package.yml
docs/: 404.html  CNAME  index.html  objects.inv  search.html  sitemap.xml
docs-mkdocs/: deployment.md  extra.css  helloworld.md  index.md
docs/deployment/: index.html
docs/helloworld/: index.html
docs/readme/: index.html
docs/search/: search_index.json
docs/tests/: index.html
scripts/: update_docs_for_github_pages.py
src/pypackitup/: __init__.py  helloworld.py
tests/: conftest.py  test_helloworld.py
