[project]
name = "python-package-template"
version = "0.0.0"
description = "Description goes here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.custom]
environment = ".venv-python_3.13.0"

[tool.uv]
dev-dependencies = [
    "bandit[toml]>=1.8.0",
    "ruff>=0.8.1",
]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".idea",
    ".pytest_cache",
    ".python-venv",
    "__pycache__",
    "build",
    "dist"
]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.bandit]
exclude_dirs = ["./.github", "./.venv*"]
